# ChangeLog for sci-libs/gerris
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/gerris/ChangeLog,v 1.19 2013/07/22 22:42:13 bicatali Exp $

*gerris-20130531 (22 Jul 2013)

  22 Jul 2013; Sébastien Fabbro <bicatali@gentoo.org>
  +files/gerris-20130531-hypre-no-mpi.patch,
  +files/gerris-20130531-lis-matrix-csr.patch,
  +files/gerris-20130531-use-blas-lapack-system.patch, +gerris-20130531.ebuild,
  -files/gerris-20100519-autotools.patch,
  -files/gerris-20111123-autotools.patch, metadata.xml:
  Version bump and fix bug #450378

  21 Feb 2013; Justin Lecher <jlec@gentoo.org> -gerris-20100519.ebuild,
  -gerris-20111123.ebuild, gerris-20120731.ebuild, metadata.xml:
  Use tc-getPKG_CONFIG from toolchain-funcs.eclass instead of plain pkg-config;
  drop old

  08 Aug 2012; Sébastien Fabbro <bicatali@gentoo.org>
  +files/gerris-hypre-no-mpi.patch, gerris-20120731.ebuild:
  Restricting test because it requires pre-installation of gerris. Added more
  mpi flag requirements, and a patch to compile with hypre when mpi is not set

*gerris-20120731 (02 Aug 2012)

  02 Aug 2012; Sébastien Fabbro <bicatali@gentoo.org> +gerris-20120731.ebuild:
  Version bump. Keyword amd64-linux x86-linux

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> gerris-20100519.ebuild,
  gerris-20111123.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*gerris-20111123 (23 Jan 2012)

  23 Jan 2012; Sébastien Fabbro <bicatali@gentoo.org> -gerris-0.8.0.ebuild,
  -gerris-0.9.2.ebuild, -gerris-20080929.ebuild,
  -files/gerris-20080929-as-needed.patch, -gerris-20100114.ebuild,
  -files/gerris-20100114-autotools.patch, +gerris-20111123.ebuild,
  +files/gerris-20111123-autotools.patch, metadata.xml:
  Version bump. Rewritten for automagic and include more modules. Initial work
  from Eckard Brauer, bug #387217

  20 Jul 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #105599
