@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=dev-libs/glib:2 dev-games/ode sci-libs/netcdf sci-libs/gsl sci-libs/gts sci-libs/hypre[mpi?] sci-libs/lis[mpi?] sci-libs/proj >=sci-libs/fftw-3 virtual/lapack mpi? ( virtual/mpi ) virtual/pkgconfig !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
+DESCRIPTION=Gerris Flow Solver
+EAPI=5
+HOMEPAGE=http://gfs.sourceforge.net/
+IUSE=examples mpi static-libs
+KEYWORDS=~amd64 ~x86 ~amd64-linux ~x86-linux
+LICENSE=GPL-2
+RDEPEND=dev-libs/glib:2 dev-games/ode sci-libs/netcdf sci-libs/gsl sci-libs/gts sci-libs/hypre[mpi?] sci-libs/lis[mpi?] sci-libs/proj >=sci-libs/fftw-3 virtual/lapack mpi? ( virtual/mpi )
+RESTRICT=test
+SLOT=0
+SRC_URI=http://gerris.dalembert.upmc.fr/gerris/tarballs/gerris-snapshot-131206.tar.gz
+_eclasses_=autotools	d76ee21296238133bd2df8dea7f33a05	autotools-utils	559ed17194292ec42d68145dcca2fa32	eutils	40081e8c7e7f7c4f9db349a1d6d52925	flag-o-matic	62e05953761097ae84a70d6c7a3e2c9c	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	93bf619f7442bc6320ec155d9d24031c
+_md5_=2faebb2392eef66b08506c579eba1423
