@@ -7,14 +7,16 @@ AUX gerris-20130531-use-blas-lapack-system.patch 1539 SHA256 fc6483c9ff4254b2d5d
 AUX gerris-hypre-no-mpi.patch 730 SHA256 a0d1df524a28c2ac9762475c448e5d317d6cbb2ade4a215f69ec939a936849dc SHA512 f2c58747496b5d5e94da30f53fb5598aba5a868399e14e9c009fba935a6697eca8efe352877ca0502b29459d39de4fdf483a0319e0f8c1dfdf5b8984ecc4f846 WHIRLPOOL 347877817f73d31cdd79497d6b3b323c0f7ca74c9f0704c126af85103e21311073f825a7a63c1d11626f226294120ff75f229904ab54ff58d65b96978de70325
 DIST gerris-snapshot-120731.tar.gz 2640044 SHA256 2a032e3418672057d1d83a5280380241d8865d4cc1a53f7bc21e95acd3a5f8fb SHA512 7ec58b715c4e52462c8e0507d34ccf554c71b3bf3575eafd8fb59002c60dcd91a749cfc53b7a4eda1822571777736dab15b0e75594b1d97b4627f72a97defb46 WHIRLPOOL abce090c4f79ee9bf4982ca9bc673ca43c6e40488e308f37a549348eb900ca1d74a8d95b59898bd173167cb849bd5afeca1e38be300d66d711f2a9225108e410
 DIST gerris-snapshot-130531.tar.gz 2822863 SHA256 808a690b928d7a90067e2115121e529311f3631882db46cecdae1468334912d5 SHA512 7372cfae4442f9daf996091d4043c3649976f937eaf6b27a8b65f58b316d26c0cb9d106da6f041ce58b2149d193ab311ed0c65d8834d42bcfebe0b7ec073be9e WHIRLPOOL be02b7b189dd2b27e00ac0cb4af10997e669afef92f4a4377f8117dfda35fe9fd894b750b605dee805288ece2f8ba4072f1d7d6570411eaab51ec8336e5c4eb9
+DIST gerris-snapshot-131206.tar.gz 2841686 SHA256 d5346a362b104ccc858c4b79938727d56c4654b103c268e54cf3aa56d0b55b39 SHA512 b3855d51eea04c496d2e5f662c148560d9ab8d5dfa97e4f7d1c22c70405b9b801b46f30aa0d159b1bd6a8182f171a1649b5f510f0e13feeb55f29cafe57b45dd WHIRLPOOL 81027d9c4c9bf44b542e1161e3238711f321b5db581b0538d5c7addc4dd5229c90f787216d05a689e287ba511546b4e7cc2fb9664bcfb9098e421722a5d8e0fd
 EBUILD gerris-20120731.ebuild 1478 SHA256 85a67eded91746ab7a7b352fc7f932973c9a86b9ac06b99d3f8a561ce5f1e41c SHA512 161794d793738f69a5e0ff51336994ff2589bb824d0952ee274bc02362535a6a8ade93cd6269209467137ae8d163dff7bea34199284db571d924bcfa758fa6c8 WHIRLPOOL 43736a92c1c47be937103d05da2171d69f7914bd0a17327136f7bc7d06a3eacd88b4f7f46db8381fbd871a954988d5e7906ef75b7e4f7b47f4f8e31ca0b039e5
 EBUILD gerris-20130531.ebuild 1565 SHA256 785e2672c670cf8093c2f3f94b213a5f6f5e647f82fd37d13065495ac55035a1 SHA512 4534244fb2b7815484327acdcef31574468fa1d3c1574d0575153027ad39f1440d158a4497e51cf96f9c3ae9ffb14ad82b12e574c0402f23df89308984335a0f WHIRLPOOL 66852a729c40e248c0614b41f72918f9cb17fc711eb7b8f4ed64b5ee7170cca916732aed5bd5131666e2147ff5e29ca3c399483d61156d1aa182ab05330a639e
-MISC ChangeLog 4165 SHA256 2aced6259b92e148a7d6b13b334369881eb0198d51377e14e5cf5ba4ce7f1740 SHA512 ac86bf1b1ee1a7f178a2a062c11377ead3305c91d47dd6cfae8fa1c689bc2cde82df9c361b2c368ed6d221317077187171dd98db571884d9d87681c8807894b1 WHIRLPOOL f2a4d9f1e946ee6ec020f64f76996bd4c4bb19c6dd2b80824fb0e6d4331f2bf1c96ee4db3b6f4cfdaae8313381245b0c85d1780d4592a7eb05eff2372e6d2d46
+EBUILD gerris-20131206.ebuild 1595 SHA256 b48560f50509c7a66a1c74d5f31e01c999672c6d57f4d505a3c4a6b775bfb78c SHA512 688d9e620b5e5199d65547ade8a807cc70fa5be393a5895f2c0df3daafc3aae580a9a433353b58db966f8fa9e03cf94ccfe2e358f28aa187be608a6918e03241 WHIRLPOOL 650cb645a2b38ab5cbdaa6e0eacf9042c56f39499a96b999fa70fc7b3c735c6bfc8479acc14b149c6f7dcd0ef66484347975db400f8a2a04e93262f77316bae5
+MISC ChangeLog 4293 SHA256 d475e72326324d99d18c1a3407aca918a35e588d6f08622ebd625ddcce7111af SHA512 c47b6eb5c7b27dee3093f600eca7e39a7a234317b6fa1bbb434617ef7fe75acc3f1e7b9a48e76777f99bd6d6c939406081e66ca545f9e268356993c5acbf90fb WHIRLPOOL db2613d68c873e3f3ff26160470405cd91258b2eadf968dcde2a80f9d23e6d28a597e6675d79480756b0baf4ae128e5e1d31ef96904863981b958a8352a31e48
 MISC metadata.xml 326 SHA256 3df2de25d2c6c61ebbd5089efa9cc9f81b2ddcc3738104e23f2cb92a58e91e53 SHA512 ce8c1f70e7327baf724876dcb2015a9d566bcf0804bca31c7f2b9d475bd90be3d7573617f0c5b16d567d2315b1ec80b2dc203d55f29889c0d7ec90385bdb219c WHIRLPOOL 913f8ee01f56e7e59e2d298482af4809a4ec2edae145fde01a133791e78e54e2952b70bbc2ec592d46c7a46a3b2d1bc9ae59a6eb73b8fdad0bbde866ec940eb4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlHttWYACgkQ1ycZbhPLE2BfngCeJOi5rSOPvHWL129AjdlPLwWC
-MfEAmwYvsLB+8nW1knsogy+rGkq0ZWjs
-=5Gy7
+iEYEAREIAAYFAlLW+bkACgkQ1ycZbhPLE2CI3wCfTfJZT0nKFA+pdaKJ39+WM/RI
+u8EAn3v4uck0UXPpP0iJ3B9mc6MFCZEM
+=wIFq
 -----END PGP SIGNATURE-----
