@@ -1,6 +1,11 @@
 # ChangeLog for sci-libs/gerris
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/gerris/ChangeLog,v 1.19 2013/07/22 22:42:13 bicatali Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/gerris/ChangeLog,v 1.20 2014/01/15 21:12:19 bicatali Exp $
+
+*gerris-20131206 (15 Jan 2014)
+
+  15 Jan 2014; Sébastien Fabbro <bicatali@gentoo.org> +gerris-20131206.ebuild:
+  Version bump
 
 *gerris-20130531 (22 Jul 2013)
 
